# conditioning-diffusions

./: .gitignore  .pre-commit-config.yaml  diffusion_model.ipynb  head  helpers.py  load_and_run_model.ipynb  output.txt  problems.py  pyproject.toml  requirements_proteins.txt  train_many_models_save_output.py  train_model.ipynb
ddpm/: experiment_mnist.py  train_diffusion.py  unet.py
losses/: loss_and_model.py  losses.py  solve_adjoint_sde.py  update_step.py
metrics/: doob_h_1d.py  metrics.py
models/: simple_unet.py
problems/: diffusion_model.py  sample.npy  toy_problems.py
problems/proteins/: sde.py  system.py
sdes/: run_sde_euler_maryuama.py  sdes.py
temp/: results.csv
temp/Protein Problem_BEL optimal/: all_metrics.pkl  config.pkl  final_params.pkl
training/: train_model.py
